# wikistream

./: .gitignore  README.md  example.json  pyproject.toml
tests/: test_wikistream.py
wikistream/: .__main__.py.swp  __init__.py  __main__.py  client.py  wikistream.py
wikistream.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wikistream/aiosseclient/: setup.py
