[tool.poetry]
name = "wikistream"
version = "0.1.4"
description = "A Python package that uses aiosseclient to stream edits from Wikimedia properties around the world and store them in TimescaleDB."
authors = ["Jonan Scheffler <jonanscheffler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
psycopg2 = "^2.8.4"
sqlalchemy = "^1.3.15"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
